# Pub-data-agent

./: .gitignore  LICENSE  pyproject.toml
src/: main.py
src/agents/: router.py  state.py
src/agents/collector/: agent.py  node.py  prompt.py  schema.py  tools.py
src/agents/communicator/: agent.py  node.py  prompt.py  tools.py
src/agents/planner/: agent.py  node.py  prompt.py  schema.py
src/config/: fundamental_models.py
src/memory/knowledge/: vector_store.py
src/memory/pgvector/: docker-compose.yaml  ibge_swagger.yaml  identificadores.csv  load_ibge_docs.py  restart_vectorStore.sh
src/workflow/: graph.py
