[project]
name = "pub-data-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "lxml>=6.0.2",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
]
